bar chart added

--- a/src/app/chartboard/chartboard.component.html
+++ b/src/app/chartboard/chartboard.component.html
@@ -1,2 +1,12 @@
+<!-- pie chart -->
+<h3>Pie Chart</h3>
 <google-chart [data]="pieChartData"></google-chart>
+<hr>
+<!-- data table -->
+<h3>Data Table</h3>
 <google-chart [data]="tableChartData"></google-chart>
+<hr>
+<!-- Bar chart -->
+<h3>Bar Chart</h3>
+<google-chart [data]="barChart"></google-chart>
+
