navigation bar added for chart routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<ul>
+  <li><a class="active" routerLink="/chartboard">Google Charts</a></li>
+  <li><a routerLink="chartjs">Chartjs Charts</a></li>
+</ul>
 
 <router-outlet></router-outlet>
