tried some different way but still unable to get chart on page

--- a/src/app/chart-js/chart-js.component.html
+++ b/src/app/chart-js/chart-js.component.html
@@ -1,3 +1,8 @@
 
-  <canvas #lineChart width="400" height="400">{{ chart }}</canvas>
+  <canvas #lineChart width="400" height="400">{{chart}}</canvas>
+
+
+  <canvas id="canvas"></canvas>
+
+  
 
