chartjs bug fixed

--- a/src/app/chart-js/chart-js.component.html
+++ b/src/app/chart-js/chart-js.component.html
@@ -1,8 +1,8 @@
+<!-- <canvas #lineChart width="400" height="400">{{chart}}</canvas> -->
 
-  <canvas #lineChart width="400" height="400">{{chart}}</canvas>
-
-
+<div style="height:300px; width:300px">
   <canvas id="canvas"></canvas>
-
-  
-
+</div>
+<div style="height:300px; width:300px">
+  <canvas id="canvas1"></canvas>
+</div>
