bar chart tested

--- a/src/app/chart-js/chart-js.component.html
+++ b/src/app/chart-js/chart-js.component.html
@@ -1,8 +1,13 @@
-<!-- <canvas #lineChart width="400" height="400">{{chart}}</canvas> -->
+<div style="margin: 20px 20px">
 
-<div style="height:300px; width:300px">
-  <canvas id="canvas"></canvas>
-</div>
-<div style="height:300px; width:300px">
-  <canvas id="canvas1"></canvas>
+  <div style="height:400px; width:500px">
+    <canvas id="canvas"></canvas>
+  </div>
+  <div style="height:400px; width:500px">
+    <canvas id="canvas1"></canvas>
+  </div>
+  <div style="height:400px; width:500px">
+    <canvas id="canvas3"></canvas>
+  </div>
+
 </div>
